--- a/a_good_time.html
+++ b/a_good_time.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>The best ever</title>
+        <title>a different title</title>
         
     </head>
     <body>
