--- a/a_good_time.html
+++ b/a_good_time.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Here's more info</h1>
-        <p>This is some more information about the workings and motivation for this article</p>
+        <p>Reowrked this seciton of the article</p>
     </body>
 </html>
