--- a/fastbender.html
+++ b/fastbender.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Here's more info</h1>
-        <p>asdfasdfasdf</p>
+        <p>This is some more information about the workings and motivation for this article</p>
     </body>
 </html>
