--- a/fastbender.html
+++ b/fastbender.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>Another Article</title>
+        <title>Another Article changed</title>
         
     </head>
     <body>
