--- a/large_article.html
+++ b/large_article.html
@@ -2,6 +2,11 @@
 
     <head>
         <title>Large Article</title>
+        <style>
+            h1 {
+                color: red;
+            }
+        </style>
     </head>
     <body>
         <h1>Check out this length!</h1>
