--- a/large_article.html
+++ b/large_article.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Check out this length!</h1>
-        <img src="https://github.com/vandenbogart/art.vandenbog.articles/media/logo.svg" />
+        <img src="https://raw.githubusercontent.com/vandenbogart/art.vandenbog.articles/master/media/logo.svg" />
         <p>Aut sunt eum enim nihil ducimus similique. Ratione est ea mollitia illo. Et ut deleniti et. Et nemo sed et accusantium ut ipsa natus inventore.</p>
         <p>Sint distinctio nam inventore omnis omnis doloribus consequatur voluptatibus. Sint explicabo commodi eum et molestiae temporibus. Eos doloremque et voluptatum. Et sed exercitationem voluptates asperiores neque. Voluptatibus error perspiciatis vel sapiente sequi asperiores possimus. Culpa quis velit omnis consequuntur iusto magnam voluptatum est.</p>
         <p>Dolorem placeat quis animi. Est voluptatibus dicta accusantium. Iusto dolor qui debitis quibusdam quo. Distinctio aut quae alias reprehenderit aperiam.</p>
