--- a/on_the_road.html
+++ b/on_the_road.html
@@ -2,6 +2,7 @@
 
     <head>
         <title class="article-title">On The Road</title>
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/vandenbogart/art.vandenbog.articles/master/styles/common.css" />
         <style>
             h1 {
                 color: red;
