--- a/on_the_road.html
+++ b/on_the_road.html
@@ -2,17 +2,8 @@
 
     <head>
         <title class="article-title">On The Road</title>
+        <link rel="stylesheet" href="localhost:3000/common.css" />
         <style>
-            @font-face {
-                font-family: NMCRedMono;
-                src: url('https://github.com/vandenbogart/art.vandenbog.articles/raw/master/fonts/Intro-Monov1.01GX.ttf')
-            }
-            .article-header {
-                font-family: NMCRedMono;
-            }
-            h1 {
-                color: red;
-            }
         </style>
     </head>
     <body>
