--- a/on_the_road.html
+++ b/on_the_road.html
@@ -2,7 +2,7 @@
 
     <head>
         <title class="article-title">On The Road</title>
-        <link rel="stylesheet" href="localhost:3000/common.css" />
+        <link rel="stylesheet" href="http://localhost:3000/common.css" />
         <style>
         </style>
     </head>
